oauth2-proxy-k8s/oauth2-proxy-mongodb-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: external-auth-oauth2
  namespace: mongodb-namespace
spec:
  ingressClassName: nginx
  rules:
  - host: oatas.veritas.com
    http:
      paths:
      - path: /mongodbexpress
        pathType: Prefix
        backend:
          service:
            name: mongodb-express-service
            port:
              number: 8081
